# knowledge-base-builder

./: .dockerignore  .env.example  .gitignore  Dockerfile  KNOWLEDGE-BASE.MD  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  database.py  main.py  models.py  models_app.py  models_study.py  schemas.py  settings_store.py  study_tags.py
app/auth/: deps.py  jwt.py
app/core/: base.py
app/domains/flashcards/: models.py  router.py  schemas.py  service.py
app/domains/forum/: models.py  router.py  schemas.py  service.py
app/middleware/: auth.py
app/pipeline/: base.py  extraction.py  parsing.py  preprocessing.py
app/pipeline/enrichers/: __init__.py  edital_gemini.py  edital_generic.py  exam_cover_gemini.py  explanation_gemini.py  gemini.py  (+7 more)
app/providers/: __init__.py  anthropic.py  base.py  deepseek.py  gemini.py  openai.py  registry.py
app/routers/: auth.py  editais.py  exams.py  gabarito.py  health.py  imports.py  ingestion.py  jobs.py  opinions.py  settings.py  study.py  users.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_add_category_to_jobs.py  0003_add_enrichment_to_questions.py  0004_add_editais.py  0005_add_explanation_to_questions.py  0006_users_opinions.py  0007_add_explanation_insight.py  0008_add_exam_metadata.py  0009_schema_curadoria.py  0010_app_schema_initial.py  0011_app_study_sessions_notes.py  0012_study_notes_session_fk.py  0013_add_images_to_questions.py  0014_system_settings.py  0015_flashcards_forum.py
scripts/: migrate.sh
worker/: tasks.py
(+5 files in other folders)
