[project]
name = "knowledge-base-builder"
version = "0.1.0"
description = "ENARE exam PDF ingestion and deterministic parsing service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "arq>=0.26",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "docling>=2.0",
    "pdfminer.six>=20221105",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0",
    "redis>=5.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "email-validator>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "worker", "migrations"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "BLE", "C4", "PLC"]
ignore = ["E501"]
